26.1 - arrow renders on entities. But holder data does not save/load correctly